<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/select_days"
        android:layout_below="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckedTextView
            android:id="@+id/checkbox_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Monday"
            android:checkMark="@drawable/checkbox_states"
            android:checked="false"/>

        <CheckedTextView
            android:id="@+id/checkbox_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tuesday"
            android:checkMark="@drawable/checkbox_states"
            android:checked="false"/>

        <CheckedTextView
            android:id="@+id/checkbox_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wednesday"
            android:checkMark="@drawable/checkbox_states"
            android:checked="false"/>

        <CheckedTextView
            android:id="@+id/checkbox_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Thursday"
            android:checkMark="@drawable/checkbox_states"
            android:checked="false"/>

        <CheckedTextView
            android:id="@+id/checkbox_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Friday"
            android:checkMark="@drawable/checkbox_states"
            android:checked="false"/>

        <CheckedTextView
            android:id="@+id/checkbox_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Saturday"
            android:checkMark="@drawable/checkbox_states"
            android:checked="false"/>

        <CheckedTextView
            android:id="@+id/checkbox_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sunday"
            android:checkMark="@drawable/checkbox_states"
            android:checked="false"/>
    </LinearLayout>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edit_title"
        android:layout_below="@+id/select_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edit_message"
        android:layout_below="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_layout"
        />

    <android.support.v7.widget.ButtonBarLayout
        android:id="@+id/button_layout"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel_button"
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/save_button"
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.ButtonBarLayout>

</RelativeLayout>