<resources>
    <string name="app_name">Reminders</string>
    <string name="action_settings">Settings</string>
    <string name="add_reminder">Add a Reminder</string>
    <string name="del_reminder">Delete this Reminder</string>
</resources>
